# eclair

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: cd.yml  ci.yml  pages.yml  release.yml
config/: foundry.toml
docs/: book.toml
docs/src/: SUMMARY.md  account_management.md  accounts_management.md  builtin_functions.md  builtin_methods.md  builtin_values.md  comparison_with_other_repls.md  configuration.md  contracts_management.md  decoding_data.md  differences_with_solidity.md  installation.md  interacting_with_contracts.md  overview.md  project_status.md  running_eclair.md
scripts/: create-tag.sh  download-binaries.sh  generate-release-body.sh  install.sh
src/: lib.rs  main.rs
src/common/: mod.rs
src/interpreter/: assignment.rs  block_functions.rs  builtin_functions.rs  builtin_methods.rs  config.rs  directive.rs  env.rs  eval_result.rs  functions.rs  interpreter.rs  mod.rs  parsing.rs  tracing.rs  types.rs  utils.rs  value.rs
src/interpreter/builtins/: abi.rs  accounts.rs  address.rs  block.rs  concat.rs  console.rs  contract_function.rs  event.rs  events.rs  format.rs  fs.rs  iterable.rs  json.rs  misc.rs  mod.rs  numeric.rs  receipt.rs  repl.rs  transaction.rs  types.rs  vm.rs
src/interpreter/function_definitions/: abi.rs  address.rs  block.rs  builtins.rs  concat.rs  console.rs  format.rs  iterable.rs  map.rs  misc.rs  mod.rs  numeric.rs  receipt.rs  repl.rs  types.rs
src/interpreter/functions/: anonymous.rs  call.rs  contract.rs  definition.rs  function.rs  mod.rs  param.rs  user_defined.rs
src/loaders/: brownie.rs  etherscan.rs  file.rs  foundry.rs  four_bytes.rs  hardhat.rs  loader.rs  mod.rs  types.rs
src/project/: foundry.rs  hardhat.rs  mod.rs  types.rs
src/repl/: cli.rs  completer.rs  config.rs  helper.rs  mod.rs  repl.rs  solidity_helper.rs
tests/: interpreter_test.rs
