[package]
name = "eclair"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "^1.0.0", features = ["backtrace"] }
glob = "^0.3.0"
rustyline = { version = "^14.0.0", features = [
    "with-sqlite-history",
    "derive",
] }
serde_json = "^1.0.0"
solang-parser = "^0.3.0"
clap = { version = "^4.5.0", features = ["derive"] }

foundry-cli = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-5ac78a9cd4b94dc53d1fe5e0f42372b28b5a7559" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-5ac78a9cd4b94dc53d1fe5e0f42372b28b5a7559" }
chisel = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-5ac78a9cd4b94dc53d1fe5e0f42372b28b5a7559" }
url = "2.5.1"
futures = "0.3.30"
tokio = "1.38.0"
alloy = { version = "0.1.2", features = ["full", "signer-ledger"] }
itertools = "0.13.0"
rpassword = "7.3.1"
coins-ledger = "0.11.1"
async-trait = "0.1.80"
futures-util = "0.3.30"
semver = "1.0.23"
shellexpand = { version = "3.1.0", features = ["path"] }
